Commented code and ready for testing phase

--- a/nbs/01_sample_manager.ipynb
+++ b/nbs/01_sample_manager.ipynb
@@ -67,40 +67,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sample manager\n",
+    "# Sample Manager\n",
     "\n",
+    "The Sample Manager module provides tools for managing and initializing sample data from Illumina and Nanopore sequencing. It includes two main classes: `sample_data` for individual sample attributes and `input_manager` for creating and handling multiple samples efficiently.\n",
     "\n",
-    "## sample_data\n",
+    "---\n",
     "\n",
-    "The sample data class is simple. It initiates an object with the following attributes:\n",
+    "## `sample_data` Class\n",
     "\n",
-    "- sample_name: an identifier for the sample\n",
-    "- assembly_file: Path to a genome assembly in fasta format, i.e. \"/path/to/genome_assembly.fasta\"\n",
-    "- Illumina_read_files: Paths to R1 and R2 from Illumina paired end sequencing in a comma-separated string, i.e. \"/path/to/R1.fastq.gz,/path/to/R2.fastq.gz\"\n",
-    "- Nanopore_read_file: Path to a file containing long read sequencing data in fastq format, i.e. \"/path/to/Nanopore_read_data.fastq.gz\"\n",
-    "- metadata: A dictionary containing metadata read from a provided tsv-file. Will also contain the above values (sample_name, paths to data files)\n",
-    "- input_folder: If provided. Needed when loading multiple samples at once using the input_manager class (see below)\n",
+    "The `sample_data` class is used to represent and store essential information for the samples. This class creates an object with the following attributes:\n",
     "\n",
+    "- **sample_name**: Identifier for the sample, e.g unique name or code.\n",
+    "- **assembly_file**: Path to the genome assembly file in FASTA format, e.g., `\"/path/to/genome_assembly.fasta\"`.\n",
+    "- **Illumina_read_files**: Paths to paired-end sequencing files (R1 and R2) from Illumina sequencing, formatted as a comma-separated string, e.g., `\"/path/to/R1.fastq.gz,/path/to/R2.fastq.gz\"`.\n",
+    "- **Nanopore_read_file**: Path to a file containing long-read sequencing data in FASTQ format, e.g., `\"/path/to/Nanopore_read_data.fastq.gz\"`.\n",
+    "- **metadata**: A dictionary containing metadata loaded from a TSV file, including `sample_name` and paths to data files.\n",
+    "- **input_folder**: Optional path used when loading multiple samples at once with the `input_manager` class (see below).\n",
     "\n",
-    "## input_manager\n",
+    "---\n",
     "\n",
-    "The input_manager class is a way to initiate sample_data class instances in three different ways:\n",
+    "## `input_manager` Class\n",
     "\n",
-    "1. Initiating just a single sample_data class instance by providing a sample name and paths to read/assembly files\n",
-    "2. Initiating class instances for all samples in a specific input folder. Assembly files, Illumina read files and Nanopore read files are auto detected and matched by sample name.\n",
-    "3. Initiating class instances for samples in a provided metadatasheet sheet with paths to those samples.\n",
+    "The `input_manager` class is designed to initiate `sample_data` class instances. It provides three different ways to initialize samples:\n",
     "\n",
-    "For all three options metadata can be provided in tsv-format.\n",
+    "1. **Single Sample Initialization**:\n",
+    "    - Creates a single `sample_data` instance by directly providing the sample name and paths to the read/assembly files.\n",
     "\n",
-    "## Usage\n",
-    "\n"
+    "2. **Folder-Based Initialization**:\n",
+    "    - Initializes `sample_data` instances for all samples in a specified input folder.\n",
+    "    - The class automatically identifies and matches files by sample name for assembly files, Illumina read files, and Nanopore read files.\n",
+    "\n",
+    "3. **Metadata Sheet-Based Initialization**:\n",
+    "    - Initializes `sample_data` instances for all samples listed in a provided metadata sheet.\n",
+    "    - This metadata sheet should contain paths to each sample’s relevant files.\n",
+    "\n",
+    "For all three options, additional metadata can be provided in TSV format and will be included in the `metadata` attribute of each `sample_data` instance.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
@@ -173,9 +176,15 @@
     "        except KeyError:\n",
     "            self.Nanopore_read_file = None # If 'Nanopore_read_file' key doesn't exist\n",
     "        # Store all attributes as metadata\n",
-    "        self.metadata: dict = attributes\n",
-    "\n",
-    "\n",
+    "        self.metadata: dict = attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class input_manager:\n",
     "    \"\"\"\n",
     "    class to manage input configurations and sample initialization\n",
@@ -215,7 +224,7 @@
     "    def get_samplesheet(self,\n",
     "                        input_config):\n",
     "        \"\"\"\n",
-    "        Function to retrieve the samplesheet from the configuration file\n",
+    "        Method to retrieve the samplesheet from the configuration file\n",
     "        and use to update metadata\n",
     "\n",
     "        Parameters\n",
@@ -236,7 +245,7 @@
     "    def init_sample(self,\n",
     "                    attributes):\n",
     "        \"\"\"\n",
-    "        Initialize a single sample object from sample_data class\n",
+    "        Method to initialize a single sample object from sample_data class\n",
     "\n",
     "        Parameters\n",
     "        -------------\n",
@@ -251,7 +260,7 @@
     "    def add_samples(self,\n",
     "                    file_paths):\n",
     "        \"\"\"\n",
-    "        Initialize multiple sample objects based on file paths\n",
+    "        Method to initialize multiple sample objects based on file paths\n",
     "\n",
     "        Parameters\n",
     "        -------------\n",
@@ -283,7 +292,7 @@
     "    def get_input_from_folder(self,\n",
     "                              input_config):\n",
     "        \"\"\"\n",
-    "        Retrieve input files from a folder and classify them by type (e.g., Illumina or Nanopore) \n",
+    "        Method to retrieve input files from a folder and classify them by type (e.g., Illumina or Nanopore) \n",
     "\n",
     "        Parameters\n",
     "        -------------\n",
@@ -371,19 +380,24 @@
     "\n",
     "    def __iter__(self):\n",
     "        \"\"\"\n",
-    "        Iteration over the samples in the input_manager object\n",
+    "        Method to iterate over the samples in the input_manager object\n",
     "        \"\"\"\n",
     "        for sample in self.samples:\n",
     "            yield(sample)\n",
     "\n",
     "    def __len__(self):\n",
     "        \"\"\"\n",
-    "        Return the number of samples managed by this object\n",
+    "        Method that returns the number of samples managed by this object\n",
     "        \"\"\"\n",
-    "        return(len(self.samples))\n",
-    "\n",
-    "\n",
-    "\n",
+    "        return(len(self.samples))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_abs_file_path(input_folder,\n",
     "                      file_path):\n",
     "    \"\"\"\n",
@@ -401,7 +415,7 @@
     "\n",
     "def get_single_sample_attributes(input_config):\n",
     "    \"\"\"\n",
-    "    Retrieve input information for a single sample.\n",
+    "    Function to retrieve input information for a single sample.\n",
     "\n",
     "    Parameters\n",
     "    -------------\n",
