Compiled with nbdev, ready for testing

--- a/nbs/01_sample_manager.ipynb
+++ b/nbs/01_sample_manager.ipynb
@@ -185,6 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# |export\n",
+    "\n",
     "class input_manager:\n",
     "    \"\"\"\n",
     "    class to manage input configurations and sample initialization\n",
@@ -398,6 +400,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# |export\n",
+    "\n",
     "def get_abs_file_path(input_folder,\n",
     "                      file_path):\n",
     "    \"\"\"\n",
@@ -560,9 +564,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "single_test()\n",
-    "single_test_assembly()\n",
-    "single_test_input_folder()\n"
+    "# single_test()\n",
+    "# single_test_assembly()\n",
+    "# single_test_input_folder()\n"
    ]
   },
   {
@@ -571,17 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_folder()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "test_folder_with_metadata()"
+    "# test_folder()"
    ]
   },
   {
@@ -591,7 +585,17 @@
    "outputs": [],
    "source": [
     "\n",
-    "samplesheet_test()"
+    "# test_folder_with_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# samplesheet_test()"
    ]
   },
   {
