--- a/nbs/02_analysis_utility.ipynb
+++ b/nbs/02_analysis_utility.ipynb
@@ -48,6 +48,7 @@
     "    core,\n",
     "    sample_manager,\n",
     "    convert_external_genome,\n",
+    "    \n",
     ")\n",
     "from pathlib import Path #to be able write :Path in cli function\n",
     "\n",
@@ -835,6 +836,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# |export\n",
+    "\n",
     "class analysis_manager(sample_manager.input_manager):\n",
     "    \"\"\"\n",
     "    Analysis manager class that inherits from `input_manager`\n",
@@ -963,6 +966,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# |export\n",
+    "\n",
     "def get_names_from_fasta(fasta_file):\n",
     "    \"\"\"\n",
     "    Parses a FASTA file and returns list with headers \n",
@@ -1227,7 +1232,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit_test_single()"
+    "# unit_test_single()"
    ]
   },
   {
@@ -1236,7 +1241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit_test_single_2()"
+    "# unit_test_single_2()"
    ]
   },
   {
@@ -1253,7 +1258,7 @@
     }
    ],
    "source": [
-    "unit_test_single_3()"
+    "# unit_test_single_3()"
    ]
   },
   {
@@ -1263,7 +1268,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "unit_test_from_folder()"
+    "# unit_test_from_folder()"
    ]
   },
   {
@@ -1283,7 +1288,7 @@
    ],
    "source": [
     "\n",
-    "unit_test_from_samplesheet()"
+    "# unit_test_from_samplesheet()"
    ]
   },
   {
@@ -1319,9 +1324,9 @@
     }
    ],
    "source": [
-    "config = core.get_config()\n",
+    "# config = core.get_config()\n",
     "\n",
-    "print_analysis_options(config[\"analysis_settings\"][\"Spyogenes\"])\n"
+    "# print_analysis_options(config[\"analysis_settings\"][\"Spyogenes\"])\n"
    ]
   },
   {
