--- a/nbs/01_sample_manager.ipynb
+++ b/nbs/01_sample_manager.ipynb
@@ -172,7 +172,8 @@
     "\n",
     "        try:\n",
     "            # Try to retrieve Nanopore read file and make it absolute\n",
-    "            self.Nanopore_read_file: Path = get_abs_file_path(self.input_folder,attributes['Nanopore_read_file'])\n",
+    "            self.Nanopore_read_file: Path = get_abs_file_path(self.input_folder,\n",
+    "                                                              attributes['Nanopore_read_file'])\n",
     "        except KeyError:\n",
     "            self.Nanopore_read_file = None # If 'Nanopore_read_file' key doesn't exist\n",
     "        # Store all attributes as metadata\n",
@@ -476,6 +477,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAS-2022-1029\n",
+      "/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta\n"
+     ]
+    }
+   ],
+   "source": [
+    "simone_testing = sample_data({\"sample_name\":\"GAS-2022-1029\",\n",
+    "                              \"assembly_file\":\"examples/GAS-2022-1029.fasta\",\n",
+    "                              \"Illumina_read_files\":[\"examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz\",\n",
+    "                                                     \"examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz\"],\n",
+    "                              \"Nanopore_read_file\":\"examples/GAS-2022-1029_nanopore.fastq.gz\"},\n",
+    "                              input_folder = False,\n",
+    "                                       )\n",
+    "\n",
+    "print(simone_testing.sample_name)\n",
+    "print(simone_testing.assembly_file)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -492,7 +520,7 @@
     "# |export\n",
     "\n",
     "def single_test():\n",
-    "    example_sample = sample_data({#\"sample_name\":\"GAS-2022-1029\",\n",
+    "    example_sample = sample_data({\"sample_name\":\"GAS-2022-1029\",\n",
     "                                       \"assembly_file\":\"examples/GAS-2022-1029.fasta\",\n",
     "                                       \"Illumina_read_files\":[\"examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz\",\"examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz\"]},\n",
     "                                       input_folder = False,\n",
@@ -527,7 +555,6 @@
     "    input_config =  config[\"input_manager\"]\n",
     "    input_config[\"load_from_folder\"] = True\n",
     "    input_config[\"input_folder\"] = \"examples/\"\n",
-    "    #input_config[\"samplesheet\"] = \"samplesheet.tsv\"\n",
     "    test = input_manager(input_config)\n",
     "    for x in test:\n",
     "        print(x.__dict__)\n",
@@ -561,41 +588,83 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_folder': None, 'sample_name': 'GAS-2022-1029', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz'], 'Nanopore_read_file': None, 'metadata': {'sample_name': 'GAS-2022-1029', 'assembly_file': 'examples/GAS-2022-1029.fasta', 'Illumina_read_files': ['examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz', 'examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz']}}\n",
+      "{'input_folder': None, 'sample_name': 'sample', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta', 'Illumina_read_files': None, 'Nanopore_read_file': None, 'metadata': {'assembly_file': 'examples/GAS-2022-1029.fasta'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2024-0773', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773_S35_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773_S35_L555_R2_001.fastq.gz'], 'Nanopore_read_file': None, 'metadata': {'sample_name': 'GAS-2024-0773', 'assembly_file': 'GAS-2024-0773.fasta', 'Illumina_read_files': ['GAS-2024-0773_S35_L555_R1_001.fastq.gz', 'GAS-2024-0773_S35_L555_R2_001.fastq.gz']}}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# single_test()\n",
-    "# single_test_assembly()\n",
-    "# single_test_input_folder()\n"
+    "single_test()\n",
+    "single_test_assembly()\n",
+    "single_test_input_folder()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2023-0253', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R2_001.fastq.gz'], 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_nanopore.fastq.gz', 'metadata': {'Nanopore_read_file': 'GAS-2023-0253_nanopore.fastq.gz', 'assembly_file': 'GAS-2023-0253.fasta', 'Illumina_read_files': 'GAS-2023-0253_S74_L555_R1_001.fastq.gz,GAS-2023-0253_S74_L555_R2_001.fastq.gz', 'sample_name': 'GAS-2023-0253'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2022-1029', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz'], 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_nanopore.fastq.gz', 'metadata': {'assembly_file': 'GAS-2022-1029.fasta', 'Illumina_read_files': 'GAS-2022-1029_S42_L555_R1_001.fastq.gz,GAS-2022-1029_S42_L555_R2_001.fastq.gz', 'Nanopore_read_file': 'GAS-2022-1029_nanopore.fastq.gz', 'sample_name': 'GAS-2022-1029'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2024-0773', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773_S35_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773_S35_L555_R2_001.fastq.gz'], 'Nanopore_read_file': None, 'metadata': {'assembly_file': 'GAS-2024-0773.fasta', 'Illumina_read_files': 'GAS-2024-0773_S35_L555_R1_001.fastq.gz,GAS-2024-0773_S35_L555_R2_001.fastq.gz', 'sample_name': 'GAS-2024-0773'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2024-0665', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0665.fasta', 'Illumina_read_files': None, 'Nanopore_read_file': None, 'metadata': {'assembly_file': 'GAS-2024-0665.fasta', 'sample_name': 'GAS-2024-0665'}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# test_folder()"
+    "test_folder()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2023-0253', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R2_001.fastq.gz'], 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_nanopore.fastq.gz', 'metadata': {'Nanopore_read_file': 'GAS-2023-0253_nanopore.fastq.gz', 'assembly_file': 'GAS-2023-0253.fasta', 'Illumina_read_files': 'GAS-2023-0253_S74_L555_R1_001.fastq.gz,GAS-2023-0253_S74_L555_R2_001.fastq.gz', 'sample_name': 'GAS-2023-0253'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2022-1029', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz'], 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_nanopore.fastq.gz', 'metadata': {'Illumina_read_files': 'GAS-2022-1029_S42_L555_R1_001.fastq.gz,GAS-2022-1029_S42_L555_R2_001.fastq.gz', 'Nanopore_read_file': 'GAS-2022-1029_nanopore.fastq.gz', 'assembly_file': 'GAS-2022-1029.fasta', 'organism': 'Streptococcus pyogenes', 'variant': 'M1DK', 'notes': 'speC positive', 'sample_name': 'GAS-2022-1029'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2024-0773', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773.fasta', 'Illumina_read_files': ['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773_S35_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0773_S35_L555_R2_001.fastq.gz'], 'Nanopore_read_file': None, 'metadata': {'assembly_file': 'GAS-2024-0773.fasta', 'Illumina_read_files': 'GAS-2024-0773_S35_L555_R1_001.fastq.gz,GAS-2024-0773_S35_L555_R2_001.fastq.gz', 'sample_name': 'GAS-2024-0773'}}\n",
+      "{'input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'sample_name': 'GAS-2024-0665', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2024-0665.fasta', 'Illumina_read_files': None, 'Nanopore_read_file': None, 'metadata': {'assembly_file': 'GAS-2024-0665.fasta', 'sample_name': 'GAS-2024-0665'}}\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# test_folder_with_metadata()"
+    "test_folder_with_metadata()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GAS-2022-1029_S42_L555_R1_001.fastq.gz,GAS-2022-1029_S42_L555_R2_001.fastq.gz\n",
+      "GAS-2022-1029.fasta\n",
+      "GAS-2022-1029\n",
+      "/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta\n",
+      "['/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz', '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz']\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# samplesheet_test()"
+    "samplesheet_test()"
    ]
   },
   {
@@ -609,20 +678,6 @@
     "import nbdev\n",
     "\n",
     "nbdev.nbdev_export()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "config = core.get_config()\n",
-    "input_config = config[\"input_manager\"]\n",
-    "input_config.update({#\"assembly_file\":\"examples/GAS-2022-1029.fasta\",\n",
-    "                     \"Illumina_read_files\": \"examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz,examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz\"})\n",
-    "get_single_sample_attributes(input_config)\n"
    ]
   }
  ],
