--- a/nbs/03_pipeline_runner.ipynb
+++ b/nbs/03_pipeline_runner.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,7 @@
     ")\n",
     "from fastcore.script import call_parse\n",
     "from pathlib import Path #to be able write :Path in cli function\n",
+    "import snakemake \n",
     "\n",
     "# Project specific libraries\n",
     "import pandas as pd\n",
@@ -102,6 +103,34 @@
     "        print(f\"When running --load_from_samplesheet a samplesheet must be provided with --samplesheet\")\n",
     "    else:\n",
     "        return(True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_pipeline(snakefile: Path, workdir: Path = Path(\"./output\"), cores: int = 1):\n",
+    "    \"\"\"\n",
+    "    Execute a Snakemake pipeline programmatically.\n",
+    "\n",
+    "    Args:\n",
+    "        snakefile (Path): Path to the Snakefile defining the workflow.\n",
+    "        workdir (Path): Working directory for the pipeline execution. Defaults to the current directory.\n",
+    "        cores (int): Number of cores to use for the pipeline. Defaults to 1.\n",
+    "    \"\"\"\n",
+    "    success = snakemake(\n",
+    "        snakefile=str(snakefile),\n",
+    "        cores=cores,\n",
+    "        workdir=str(workdir),\n",
+    "        use_conda=True,  # Enable Conda if needed\n",
+    "        force_incomplete=True,  # Rerun incomplete jobs\n",
+    "        printreason=True,  # Show reasons for executing rules\n",
+    "        dryrun=True,  # Set to True to preview the pipeline execution\n",
+    "    )\n",
+    "    if not success:\n",
+    "        raise RuntimeError(\"Snakemake pipeline failed!\")"
    ]
   },
   {
@@ -507,6 +536,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
