Production with Snakemake

--- a/nbs/03_pipeline_runner.ipynb
+++ b/nbs/03_pipeline_runner.ipynb
@@ -220,7 +220,7 @@
     "            VFDB_blast_config[\"results_format\"] = \"string\"\n",
     "            self._blast_presence_absence_(VFDB_blast_config)\n",
     "        \n",
-    "        self.sample_cleanup()  # Cleanup after analyses are done\n",
+    "        #self.sample_cleanup()  # Cleanup after analyses are done\n",
     "        self.write_to_tsv()  # Write results to a TSV file\n",
     "\n",
     "\n",
