--- a/nbs/02_analysis_utility.ipynb
+++ b/nbs/02_analysis_utility.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,20 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: /dpssi/home/scrsim/ssi_analysis_utility/nbs/examples/GAS-2022-1029.fasta does not exist\n",
-      "WARNING: /dpssi/home/scrsim/ssi_analysis_utility/nbs/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz does not exist\n",
-      "WARNING: /dpssi/home/scrsim/ssi_analysis_utility/nbs/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz does not exist\n",
-      "WARNING: /dpssi/home/scrsim/ssi_analysis_utility/nbs/examples/GAS-2022-1029_nanopore.fastq.gz does not exist\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# |export\n",
     "# That export there, it makes sure this code goes into the module.\n",
@@ -73,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,8 +769,8 @@
     "                best_hit = \"-\"\n",
     "            \n",
     "            self.analysis_results[analysis_alias].update({\"Lineage\": best_hit})\n",
-    "            self.analysis_cleanup(analysis_alias,\n",
-    "                                  lineage_determination_config[\"files_to_clean\"])\n",
+    "            #self.analysis_cleanup(analysis_alias,\n",
+    "            #                      lineage_determination_config[\"files_to_clean\"])\n",
     "\n",
     "\n",
     "\n",
@@ -1023,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1414,14 +1403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'analysis_settings_config': {'analyses_to_run': {'emm_typing': 'Typing of M protein gene using blast against CDC curated alleles', 'assembly_lineage_determination': 'Lineage determination based on presence of specified SNPs when mapping genome assembly against reference genome', 'resistance_gene_detection': 'Presence of resistance gens tetM, ermA and ermB', 'virulence_gene_detection': 'Presence of Streptococcal virulence genes from the Virulence Factor Database'}, 'assembly_lineage_determination': {'alias': 'assembly_lineage_determination', 'percent_snp_threshold': 50, 'files_to_clean': ['delta', 'filtered_delta', 'frankenfasta'], 'reference_fasta_file': './resources/lineage_determination/MGAS5005.fasta', 'lineage_variant_file': './resources/lineage_determination/Spyogenes_LOCs.tsv'}, 'emm_typing': {'alias': 'emm_typing', 'emm_allele_file': './resources/emm_typing/emm_alleles.fasta', 'emm_cluster_file': './resources/emm_typing/emm_enn_mrp_subgroups.txt', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'files_to_clean': ['blast']}, 'resistance_gene_detection': {'pident_threshold': 80, 'cov_threshold': 80, 'additional_blast_parameters': '', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'results_format': 'matrix', 'files_to_clean': ['blast'], 'alias': 'resistance_genes', 'query_fasta_file': './resources/AMR/AMR_genes.fasta'}, 'virulence_gene_detection': {'pident_threshold': 80, 'cov_threshold': 80, 'additional_blast_parameters': '', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'results_format': 'matrix', 'files_to_clean': ['blast'], 'alias': 'virulence_genes', 'query_fasta_file': './resources/virulence_factors/VFDB_genes.fasta'}, 'Illumina_lineage_determination': {'alias': 'Illumina_lineage_determination', 'reference_fasta_file': './resources/lineage_determination/MGAS5005.fasta', 'lineage_variant_file': './resources/lineage_determination/Spyogenes_LOCs.tsv', 'files_to_clean': ['vcf', 'bam', 'bam_index']}}, 'base_output_folder': '/dpssi/home/scrsim/ssi_analysis_utility/output_from_folder', 'base_input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'metadata_file': None, 'metadata': None, 'samples': [<__main__.analysis_utility object at 0x7fa97b32e610>, <__main__.analysis_utility object at 0x7fa97b32ac90>, <__main__.analysis_utility object at 0x7fa97b171150>, <__main__.analysis_utility object at 0x7fa97b170090>]}\n"
+      "{'analysis_settings_config': {'analyses_to_run': {'emm_typing': 'Typing of M protein gene using blast against CDC curated alleles', 'assembly_lineage_determination': 'Lineage determination based on presence of specified SNPs when mapping genome assembly against reference genome', 'resistance_gene_detection': 'Presence of resistance gens tetM, ermA and ermB', 'virulence_gene_detection': 'Presence of Streptococcal virulence genes from the Virulence Factor Database'}, 'assembly_lineage_determination': {'alias': 'assembly_lineage_determination', 'percent_snp_threshold': 50, 'files_to_clean': ['delta', 'filtered_delta', 'frankenfasta'], 'reference_fasta_file': './resources/lineage_determination/MGAS5005.fasta', 'lineage_variant_file': './resources/lineage_determination/Spyogenes_LOCs.tsv'}, 'emm_typing': {'alias': 'emm_typing', 'emm_allele_file': './resources/emm_typing/emm_alleles.fasta', 'emm_cluster_file': './resources/emm_typing/emm_enn_mrp_subgroups.txt', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'files_to_clean': ['blast']}, 'resistance_gene_detection': {'pident_threshold': 80, 'cov_threshold': 80, 'additional_blast_parameters': '', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'results_format': 'matrix', 'files_to_clean': ['blast'], 'alias': 'resistance_genes', 'query_fasta_file': './resources/AMR/AMR_genes.fasta'}, 'virulence_gene_detection': {'pident_threshold': 80, 'cov_threshold': 80, 'additional_blast_parameters': '', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'results_format': 'matrix', 'files_to_clean': ['blast'], 'alias': 'virulence_genes', 'query_fasta_file': './resources/virulence_factors/VFDB_genes.fasta'}, 'Illumina_lineage_determination': {'alias': 'Illumina_lineage_determination', 'reference_fasta_file': './resources/lineage_determination/MGAS5005.fasta', 'lineage_variant_file': './resources/lineage_determination/Spyogenes_LOCs.tsv', 'files_to_clean': ['vcf', 'bam', 'bam_index']}}, 'base_output_folder': '/dpssi/home/scrsim/ssi_analysis_utility/output_from_folder', 'base_input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'metadata_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/samplesheet.tsv', 'metadata': {'GAS-2022-1029': {'Illumina_read_files': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz,/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz', 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_nanopore.fastq.gz', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta', 'organism': 'Streptococcus pyogenes', 'variant': 'M1DK', 'notes': 'speC positive'}, 'GAS-2023-0253': {'Illumina_read_files': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R1_001.fastq.gz,/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R2_001.fastq.gz', 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_nanopore.fastq.gz', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253.fasta', 'organism': 'Streptococcus pyogenes', 'variant': 'M1DK', 'notes': 'Nan'}}, 'samples': [<__main__.analysis_utility object at 0x7fd41c9d4990>, <__main__.analysis_utility object at 0x7fd41cb2b9d0>]}\n"
      ]
     }
    ],
@@ -1431,16 +1420,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'analysis_settings_config': {'analyses_to_run': {'emm_typing': 'Typing of M protein gene using blast against CDC curated alleles', 'assembly_lineage_determination': 'Lineage determination based on presence of specified SNPs when mapping genome assembly against reference genome', 'resistance_gene_detection': 'Presence of resistance gens tetM, ermA and ermB', 'virulence_gene_detection': 'Presence of Streptococcal virulence genes from the Virulence Factor Database'}, 'assembly_lineage_determination': {'alias': 'assembly_lineage_determination', 'percent_snp_threshold': 50, 'files_to_clean': ['delta', 'filtered_delta', 'frankenfasta'], 'reference_fasta_file': './resources/lineage_determination/MGAS5005.fasta', 'lineage_variant_file': './resources/lineage_determination/Spyogenes_LOCs.tsv'}, 'emm_typing': {'alias': 'emm_typing', 'emm_allele_file': './resources/emm_typing/emm_alleles.fasta', 'emm_cluster_file': './resources/emm_typing/emm_enn_mrp_subgroups.txt', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'files_to_clean': ['blast']}, 'resistance_gene_detection': {'pident_threshold': 80, 'cov_threshold': 80, 'additional_blast_parameters': '', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'results_format': 'matrix', 'files_to_clean': ['blast'], 'alias': 'resistance_genes', 'query_fasta_file': './resources/AMR/AMR_genes.fasta'}, 'virulence_gene_detection': {'pident_threshold': 80, 'cov_threshold': 80, 'additional_blast_parameters': '', 'blast_header': 'qseqid sseqid pident length qlen qstart qend sstart send sseq evalue bitscore', 'results_format': 'matrix', 'files_to_clean': ['blast'], 'alias': 'virulence_genes', 'query_fasta_file': './resources/virulence_factors/VFDB_genes.fasta'}, 'Illumina_lineage_determination': {'alias': 'Illumina_lineage_determination', 'reference_fasta_file': './resources/lineage_determination/MGAS5005.fasta', 'lineage_variant_file': './resources/lineage_determination/Spyogenes_LOCs.tsv', 'files_to_clean': ['vcf', 'bam', 'bam_index']}}, 'base_output_folder': '/dpssi/home/scrsim/ssi_analysis_utility/output_from_samplesheet', 'base_input_folder': '/dpssi/home/scrsim/ssi_analysis_utility/examples', 'metadata_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/samplesheet.tsv', 'metadata': {'GAS-2022-1029': {'Illumina_read_files': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R1_001.fastq.gz,/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_S42_L555_R2_001.fastq.gz', 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029_nanopore.fastq.gz', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2022-1029.fasta', 'organism': 'Streptococcus pyogenes', 'variant': 'M1DK', 'notes': 'speC positive'}, 'GAS-2023-0253': {'Illumina_read_files': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R1_001.fastq.gz,/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_S74_L555_R2_001.fastq.gz', 'Nanopore_read_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253_nanopore.fastq.gz', 'assembly_file': '/dpssi/home/scrsim/ssi_analysis_utility/examples/GAS-2023-0253.fasta', 'organism': 'Streptococcus pyogenes', 'variant': 'M1DK', 'notes': 'Nan'}}, 'samples': [<__main__.analysis_utility object at 0x7fd41cb2bf90>, <__main__.analysis_utility object at 0x7fd4cff16950>]}\n"
+     ]
+    }
+   ],
    "source": [
     "unit_test_from_samplesheet()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
