--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,159 +13,89 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# ssi_analysis_utility\n",
+    "# Bioinformatics Snakemake Pipeline "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "> TODO"
+    "## Overview\n",
+    "This Snakemake pipeline automates microbial genomic analyses, integrating tools for resistance gene detection, virulence factor identification, typing, and lineage determination."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Developer Guide"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you are new to using `nbdev` here are some useful pointers to get you started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install ssi_analysis_utility in Development mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```sh\n",
-    "# make sure ssi_analysis_utility package is installed in development mode\n",
-    "$ pip install -e .\n",
+    "## Installation\n",
     "\n",
-    "# make changes under nbs/ directory\n",
-    "# ...\n",
+    "1. Clone the repository:\n",
+    "   ```bash\n",
+    "   git clone <repository-url>\n",
+    "   cd <repository-directory>\n",
+    "   ```\n",
+    "2. Install dependencies:\n",
+    "    ```bash\n",
+    "    conda env create -f environment.yaml\n",
+    "    conda activate <env-name>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running the Pipeline\n",
     "\n",
-    "# compile to have changes apply to ssi_analysis_utility\n",
-    "$ nbdev_prepare\n",
+    "1. Prepare the samplesheet.tsv:\n",
+    "\n",
+    "- Include sample IDs, file paths for reads, and assembly files.\n",
+    "Customize config.yaml:\n",
+    "\n",
+    "2. Define tools, databases, and analyses for your samples.\n",
+    "\n",
+    "3. Execute Snakemake:\n",
+    "    ```bash\n",
+    "    cd workflow\n",
+    "    snakemake --configfile ../config/config.yaml --cores <N cores>\n",
+    "    ```\n",
+    "4. Results:\n",
+    "- Output files will be stored in the directory specified by ```out_folder```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Output Structure\n",
+    "\n",
+    "Results are organized by species and sample:\n",
+    "```\n",
+    "results/\n",
+    "├── Species_1/\n",
+    "│   ├── sample1/\n",
+    "│   │   ├── analysis_1/\n",
+    "│   │   ├── analysis_2/\n",
+    "│   │   └── analysis_3/\n",
+    "│   └── sample2/\n",
+    "|       ├── analysis_1/\n",
+    "|       ├── analysis_2/\n",
+    "|       ...\n",
+    "├── Species_1/\n",
+    "│   ├── sample1/\n",
+    "|       ├── analysis_1/\n",
+    "|       ...\n",
+    "│   \n",
+    "└── logs/\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Usage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Installation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install latest from the GitHub [repository][repo]:\n",
-    "\n",
-    "```sh\n",
-    "$ pip install git+https://github.com/$GIT_USER_NAME/ssi_analysis_utility.git\n",
-    "```\n",
-    "\n",
-    "or from [conda][conda]\n",
-    "\n",
-    "```sh\n",
-    "$ conda install -c $GIT_USER_NAME ssi_analysis_utility\n",
-    "```\n",
-    "\n",
-    "or from [pypi][pypi]\n",
-    "\n",
-    "\n",
-    "```sh\n",
-    "$ pip install ssi_analysis_utility\n",
-    "```\n",
-    "\n",
-    "\n",
-    "[repo]: https://github.com/$GIT_USER_NAME/ssi_analysis_utility\n",
-    "[docs]: https://$GIT_USER_NAME.github.io/ssi_analysis_utility/\n",
-    "[pypi]: https://pypi.org/project/ssi_analysis_utility/\n",
-    "[conda]: https://anaconda.org/$GIT_USER_NAME/ssi_analysis_utility"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Documentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs]. Additionally you can find package manager specific guidelines on [conda][conda] and [pypi][pypi] respectively.\n",
-    "\n",
-    "[repo]: https://github.com/$GIT_USER_NAME/ssi_analysis_utility\n",
-    "[docs]: https://$GIT_USER_NAME.github.io/ssi_analysis_utility/\n",
-    "[pypi]: https://pypi.org/project/ssi_analysis_utility/\n",
-    "[conda]: https://anaconda.org/$GIT_USER_NAME/ssi_analysis_utility"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
